--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -14,11 +14,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-
       - name: Set up Go
         uses: actions/setup-go@v4
         with:
           go-version: "1.20"
-
       - name: Build
         run: cd ./tcp-client-server && go build -v ./...
+      - name: Test Client
+        run: cd ./tcp-client-server/tcp-client && go test         
